observability/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-pvc
      containers:
      - name: grafana
        image: grafana/grafana:main
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: data
        resources:
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
