observability/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  ports:
  - name: "grafana"
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  type: LoadBalancer
